--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ChatGPT-App",
-    "slug": "ChatGPT-App",
+    "name": "Games",
+    "slug": "Games",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
