--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
-    "react-uuid": "^2.0.0"
+    "react-uuid": "^2.0.0",
+    "react-native-webview": "11.23.1",
+    "expo-linking": "~3.3.1",
+    "expo-constants": "~14.0.2",
+    "react-native-gesture-handler": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@expo/webpack-config": "^0.17.2",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "typescript": "^4.6.3"
